funcdocker/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: functions-http
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: funcdocker-http
            servicePort: 80
          path: /func(/|$)(.*)
